{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 408,
  "lineage": "a734443c-0258-8203-6e2b-d15ff24998b6",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "test_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-09272fde9f5458df9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09272fde9f5458df9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "270881836940",
            "subnet_ids": [
              "subnet-01e7749fb8baa7925",
              "subnet-020c2c6dbe8c41e2e",
              "subnet-02c084ccb0b63d91c",
              "subnet-05cd78d679ead1093",
              "subnet-0d4d5124e54bd14e5",
              "subnet-0dcbac76ee47240d0"
            ],
            "tags": {
              "Name": "test-default",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:security-group/sg-0a741462b8a236efc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a741462b8a236efc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "270881836940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-default",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06dc1a2cbf486ede8",
            "public_dns": "ec2-15-188-171-252.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.171.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07d74e1aec5375720",
            "public_dns": "ec2-15-188-18-131.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.18.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_test_pri",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0652eb0db9b20aeaf",
            "arn": "arn:aws:ec2:eu-west-3:270881836940:instance/i-0cec0be7c3f760fa1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cec0be7c3f760fa1",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "jaehoon-test",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a336948fef12f65e",
            "private_dns": "ip-10-1-2-237.eu-west-3.compute.internal",
            "private_ip": "10.1.2.237",
            "public_dns": "ec2-35-180-57-68.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.57.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-083d44312b1ba6f76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020c2c6dbe8c41e2e",
            "tags": {
              "Name": "wasec2_test-ec2-eu-west-3a",
              "TerraformManaged": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2a1e0ddd96bf769"
            ]
          },
          "dependencies": [
            "module.ec2_test_pri.aws_security_group.ec2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0652eb0db9b20aeaf",
            "arn": "arn:aws:ec2:eu-west-3:270881836940:instance/i-0563adb3828a95a6b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0563adb3828a95a6b",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "jaehoon-test",
            "monitoring": false,
            "primary_network_interface_id": "eni-028165861d7ba52be",
            "private_dns": "ip-10-1-3-186.eu-west-3.compute.internal",
            "private_ip": "10.1.3.186",
            "public_dns": "ec2-35-180-133-27.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.133.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec7b118cadc062b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05cd78d679ead1093",
            "tags": {
              "Name": "wasec2_test-ec2-eu-west-3b",
              "TerraformManaged": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2a1e0ddd96bf769"
            ]
          },
          "dependencies": [
            "module.ec2_test_pri.aws_security_group.ec2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_test",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0652eb0db9b20aeaf",
            "arn": "arn:aws:ec2:eu-west-3:270881836940:instance/i-0ee3c0c95f59bef81",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ee3c0c95f59bef81",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "jaehoon-test",
            "monitoring": false,
            "primary_network_interface_id": "eni-080d14f1ca5faf98a",
            "private_dns": "ip-10-1-0-61.eu-west-3.compute.internal",
            "private_ip": "10.1.0.61",
            "public_dns": "ec2-35-180-250-43.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.250.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-084ac0a45d7237894",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4d5124e54bd14e5",
            "tags": {
              "Name": "webec2_test-ec2-eu-west-3a",
              "TerraformManaged": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c1543d34a9380ee"
            ]
          },
          "dependencies": [
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0652eb0db9b20aeaf",
            "arn": "arn:aws:ec2:eu-west-3:270881836940:instance/i-0cc549e5ce923ea51",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0cc549e5ce923ea51",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "jaehoon-test",
            "monitoring": false,
            "primary_network_interface_id": "eni-03023bb223e6b6249",
            "private_dns": "ip-10-1-1-171.eu-west-3.compute.internal",
            "private_ip": "10.1.1.171",
            "public_dns": "ec2-15-188-207-89.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.207.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03123bb380cc43d77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e7749fb8baa7925",
            "tags": {
              "Name": "webec2_test-ec2-eu-west-3b",
              "TerraformManaged": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c1543d34a9380ee"
            ]
          },
          "dependencies": [
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01a09326c53cf6273",
            "owner_id": "270881836940",
            "tags": {
              "Name": "test",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:loadbalancer/app/my-alb/8ccea283d6bc69de",
            "arn_suffix": "app/my-alb/8ccea283d6bc69de",
            "dns_name": "my-alb-1487405036.eu-west-3.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:loadbalancer/app/my-alb/8ccea283d6bc69de",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-00c1543d34a9380ee"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e7749fb8baa7925"
              },
              {
                "subnet_id": "subnet-0d4d5124e54bd14e5"
              }
            ],
            "subnets": [
              "subnet-01e7749fb8baa7925",
              "subnet-0d4d5124e54bd14e5"
            ],
            "tags": {
              "Name": "my-alb-lb",
              "TerraformManaged": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0c0588174e6275662",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:listener/app/my-alb/8ccea283d6bc69de/a731e19735567c17",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:listener/app/my-alb/8ccea283d6bc69de/a731e19735567c17",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:loadbalancer/app/my-alb/8ccea283d6bc69de",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
            "arn_suffix": "targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20200109051538178000000001",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-alb-lb",
              "TerraformManaged": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5-20200109051538491300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
            "target_id": "i-0ee3c0c95f59bef81"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_test.aws_instance.this",
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5-20200109051538536500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:270881836940:targetgroup/tf-20200109051538178000000001/8383f39b2424c2d5",
            "target_id": "i-0cc549e5ce923ea51"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main",
            "module.ec2_test.aws_instance.this",
            "module.ec2_test.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dc1a2cbf486ede8",
            "id": "nat-092f94af13e259004",
            "network_interface_id": "eni-06852d15ea23c4425",
            "private_ip": "10.1.0.26",
            "public_ip": "15.188.171.252",
            "subnet_id": "subnet-0d4d5124e54bd14e5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d74e1aec5375720",
            "id": "nat-0d001dd4ce0cd9935",
            "network_interface_id": "eni-0a2af5b217c8aae7d",
            "private_ip": "10.1.1.187",
            "public_ip": "15.188.18.131",
            "subnet_id": "subnet-01e7749fb8baa7925"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08db3c5c0587fa123",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-092f94af13e259004",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-eu-west-3a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0597ff896af962765",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d001dd4ce0cd9935",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-eu-west-3b",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03cfe71bf9f746a84",
            "owner_id": "270881836940",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a09326c53cf6273",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eeef9e7030ebb61",
            "route_table_id": "rtb-08db3c5c0587fa123",
            "subnet_id": "subnet-0dcbac76ee47240d0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b1d131d68bfd48c",
            "route_table_id": "rtb-0597ff896af962765",
            "subnet_id": "subnet-02c084ccb0b63d91c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0411f7a824e3d9513",
            "route_table_id": "rtb-08db3c5c0587fa123",
            "subnet_id": "subnet-020c2c6dbe8c41e2e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06298fa55419453c0",
            "route_table_id": "rtb-0597ff896af962765",
            "subnet_id": "subnet-05cd78d679ead1093"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0144e54765c28c396",
            "route_table_id": "rtb-03cfe71bf9f746a84",
            "subnet_id": "subnet-0d4d5124e54bd14e5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce27baae42cba125",
            "route_table_id": "rtb-03cfe71bf9f746a84",
            "subnet_id": "subnet-01e7749fb8baa7925"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_test_pri",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:security-group/sg-0a2a1e0ddd96bf769",
            "description": "Allow SSH connect to ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2a1e0ddd96bf769",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wasec2_test",
            "name_prefix": null,
            "owner_id": "270881836940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wasec2_test-ec2",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:security-group/sg-00c1543d34a9380ee",
            "description": "Allow SSH connect to ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c1543d34a9380ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webec2_test",
            "name_prefix": null,
            "owner_id": "270881836940",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webec2_test-ec2",
              "TerraformManaged": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-0dcbac76ee47240d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0dcbac76ee47240d0",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-db-eu-west-3a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-02c084ccb0b63d91c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-02c084ccb0b63d91c",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-db-eu-west-3b",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-020c2c6dbe8c41e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-020c2c6dbe8c41e2e",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-private-eu-west-3a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-05cd78d679ead1093",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-05cd78d679ead1093",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-private-eu-west-3b",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-0d4d5124e54bd14e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0d4d5124e54bd14e5",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-public-eu-west-3a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:subnet/subnet-01e7749fb8baa7925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-01e7749fb8baa7925",
            "map_public_ip_on_launch": false,
            "owner_id": "270881836940",
            "tags": {
              "Name": "test-public-eu-west-3b",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0c0588174e6275662"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:270881836940:vpc/vpc-0c0588174e6275662",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09272fde9f5458df9",
            "default_route_table_id": "rtb-05532927ca08578f8",
            "default_security_group_id": "sg-0a741462b8a236efc",
            "dhcp_options_id": "dopt-67e2d70e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0588174e6275662",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05532927ca08578f8",
            "owner_id": "270881836940",
            "tags": {
              "Name": "test",
              "TerraformManaged": "true"
            }
          }
        }
      ]
    }
  ]
}